# Minecraft

./: .gitignore  CMakeLists.txt
assets/models/blocks/: dirt.json  grass.json  stone.json
assets/textures/blocks/: grass_block_top.xcf
include/: BlockMesh.h  Blocks.h  MyCamera.h  TextureLoader.h  Vector3d.h  World.h
src/: BlockMesh.cpp  Blocks.cpp  MyCamera.cpp  TextureLoader.cpp  main.cpp
